<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/holo_orange_light"
tools:context=".inicioActivity">

<Button
    android:id="@+id/btnNovoAbast"
    android:layout_width="150dp"
    android:layout_height="60dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="76dp"
    android:layout_marginEnd="8dp"
    android:text="@string/novo_abastecimento"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView6" />

<Button
    android:id="@+id/btnResumo"
    android:layout_width="150dp"
    android:layout_height="60dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="28dp"
    android:layout_marginEnd="8dp"
    android:text="@string/resumo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btnNovoAbast" />

<Button
    android:id="@+id/btnCalculadora"
    android:layout_width="150dp"
    android:layout_height="60dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="11dp"
    android:text="@string/calculadora_flex"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btnResumo"
    app:layout_constraintVertical_bias="0.131" />

<TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="64dp"
    android:layout_marginEnd="8dp"
    android:text="@string/carhealth"
    android:textColor="@android:color/background_dark"
    android:textSize="50sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.503"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>